# ROBO-ESOCIAL

./: .editorconfig  .gitignore  .justfile  .pre-commit-config.yaml  .prettierrc  CONTRIBUTING.md  DIRETRIZES.md  alfa.xlsx  build-requirements.txt  ci-requirements.txt  dev-requirements.txt  dist-requirements.txt  docutils.conf  exe.py  import pyautogui.py  informacoes.xlsx  jupyter.ipynb  package-lock.json  package.json  pyproject.toml  requirements.txt  robo teste.py  robo.py  setup.py  taplo.toml
.github/workflows/: bandit.yml  format.yml  prettier.yml  pylint.yml  pyright.yml  pytest.yml  python_formatting.yml  ruff.yml
.husky/: pre-commit
assets/: certificado.reg  loaded.html
config/: kivyconf.ini
crawl/sheet/: abc.py  types.py
crawl/steps/: __init__.py  step.py
docs/: EXCEL.md  TKINTER.md
docs/sphinx/source/: conf.py
gui/: __main__.py  app.py  styles.py
gui/constants/: __init__.py  style.py
gui/state/: __init__.py  thread.py
gui/utils/: units.py
gui/views/: SheetProcess.py  __init__.py
gui/views/SheetProcess/: HistoryList.py  InteractiveTreeList.py  ProcessingQueue.py  QueueButtonRow.py  ShortTree.py  __init__.py  data.py
gui/widgets/: ProcessingSheetsCounter.py  StatusBar.py  ViewNavigator.py  __init__.py
gui/widgets/StatusBar/: __init__.py
hooks/: ruff.sh
installer/: entrypoint.py
js/meta/: cookieChange.d.ts  cookieChange.js  localStorageChange.d.ts  localStorageChange.js
scripts/: boostrap.py  format_json.py
sistema/models/: Cell.py  Column.py  ColumnMetadata.py  ColumnMetadata_test.py  Coluna.py  ColunaModel.py  ColunaModel_test.py  Row.py  RowData.py  RowData_test.py  __init__.py  types.py
sistema/parsers/: __init__.py  parse_column_titles.py  parser.py
sistema/parsers/modelo1/: __init__.py  parser.py  schema.py
sistema/spreadsheet/: __init__.py  constants.py  exceptions.py  sheet_columns.py  style.py  util.py
sistema/validators/: __init__.py  base.py  boolean.py  date.py  float.py  integer.py  integer_string.py  letter_string.py  numeric_string.py  option.py  string.py  validator.py
src/: __init__.py  __main__.py  acesso.py  bootstrap.py  caminhos.py  certificate.py  erros.py  exc.py  global_state.py  main.py  mainloop.py  planilha.py  runtime.py  tipos.py  types.py  windows.py
src/async_vitals/: messaging.py  processes.py
src/crawl/steps/: __init__.py  step.py
src/db/: __init__.py  client.py  custom_types.py  tables.py
src/gui/: __main__.py  app.py  asyncio.py  global_runtime_constants.py  lock.py  mp.py  styles.py  tkinter_global.py
src/gui/constants/: __init__.py
src/gui/utils/: helpers.py  units.py
src/gui/views/: CertificateManager.py  CertificateSelector.py  SheetProcess.py  View.py  __init__.py
src/gui/views/SheetProcess/: HistoryList.py  InteractiveTreeList.py  ProcessingQueue.py  QueueButtonRow.py  ShortTree.py  __init__.py  data.py
src/gui/widgets/: ViewNavigator.py  __init__.py
src/gui/widgets/StatusBar/: ProgressCounter.py  StatusBar.py  __init__.py
src/kv/: app.kv  file_select.kv  home.kv  nav.kv  pages.kv  popup_message.kv
src/local/: io.py  selenium.py  types.py
src/sistema/: browser_config.py  crawl.py  model_base.py  models.py  protocol_types.py  sheet.py  sheet_constants.py  sheet_data_schema.py  validator.py
src/sistema/models/: Cell.py  Column.py  Model.py  __init__.py
src/sistema/parsers/: __init__.py  parser.py
src/sistema/parsers/modelo1/: parser.py  schema.py
src/sistema/spreadsheet/: __init__.py  constants.py  sheet_columns.py  sheet_info.py  sheet_model.py  spreadsheet.py  style.py  util.py
src/sistema/validators/: boolean.py  date.py  float.py  integer.py  integer_string.py  letter_string.py  numeric_string.py  option.py  string.py  validator.py
src/testing/: __init__.py  fake_sheet.py  fake_sheet_test.py  iter.py
src/uix/: __init__.py  app.py  nav.py  process_entrypoint.py  state.py  style_guides.py
src/uix/pages/: base.py  home.py
src/uix/pages/file_select/: __init__.py  bases.py  progress.py  queue.py  select_and_add.py
src/uix/pages/home/: __init__.py  cards.py  sections.py
src/uix/popup/: message.py
src/utils/: __init__.py  acesso.py  constants.py  decorators.py  decorators_test.py  io.py  iterables.py  objects.py  python.py  selenium.py
src/webdriver/: acesso.py  caminhos.py  erros.py  main.py  planilha.py  process_entrypoint.py  queues.py  tipos.py  types.py  windows.py
src/webdriver/local/: io.py
src/webdriver/utils/: acesso.py  python.py  selenium.py
templates/LEGAL/: lista_pacotes.md  pagina_licenca.md  resumo_licencas.md  style.css
templates/LEGAL/standalone/: 1-definicoes.md
testes/: funcionarios_invalidos.xlsx
testing/: __init__.py  fake_sheet.py  fake_sheet_test.py  iter.py
utils/: __init__.py  assertions.py  constants.py  decorators.py  decorators_test.py  exceptions.py
